--- a/src/styles/scss/navbar.scss
+++ b/src/styles/scss/navbar.scss
@@ -12,6 +12,9 @@ audio {
 }
 nav {
   font-size: 2.5dvh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
   .navbar-brand {
     color: #fff;
@@ -25,6 +28,12 @@ nav {
       color: #6e6d6d;
       transition: ease all 0.2s;
     }
+  }
+  .nav-items {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-left: auto;
   }
   .nav-item {
     color: #fff;
